@@ -1,6 +1,0 @@
-QDBM is an embeded database library compatible with GDBM and NDBM.  It
-features hash database and B+ tree database and is developed referring
-to GDBM for the purpose of the following three points: higher
-processing speed, smaller size of a database file, and simpler API.
-
-This package provides the Perl interface of QDBM.
